--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B test --file pom.xml
+      run: mvn -B test -Dspring.profiles.active=test --file pom.xml
