--- a/ganon-admin/src/main/resources/application.yml
+++ b/ganon-admin/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-
+server:
+  port: 8080
+spring:
+  application:
+    name: ganon-admin
+  profiles:
+    active: dev
+  datasource:
+    hikari:
+      minimum-idle: 8
+      maximum-pool-size: 20
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
