--- a/ganon-admin/pom.xml
+++ b/ganon-admin/pom.xml
@@ -82,6 +82,10 @@
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
