feat: add func tinyurl

--- a/ganon-core/pom.xml
+++ b/ganon-core/pom.xml
@@ -3,14 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.lyx.ganon</groupId>
+		<artifactId>ganon-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../</relativePath>
 	</parent>
-	<groupId>com.lyx.ganon</groupId>
 	<artifactId>ganon-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>ganon-core</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -35,7 +33,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
