--- a/ganon-admin/pom.xml
+++ b/ganon-admin/pom.xml
@@ -20,6 +20,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.lyx.ganon</groupId>
+			<artifactId>ganon-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
