--- a/ganon-admin/pom.xml
+++ b/ganon-admin/pom.xml
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.lyx.ganon</groupId>
-			<artifactId>ganon-core</artifactId>
+			<artifactId>ganon-common</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
