--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
     <!-- 模块说明：这里声明多个子模块 -->
     <modules>
-        <module>ganon-core</module>
+        <module>ganon-common</module>
         <module>ganon-admin</module>
     </modules>
 
@@ -41,7 +41,7 @@
         <dependencies>
             <dependency>
                 <groupId>com.lyx.ganon</groupId>
-                <artifactId>ganon-core</artifactId>
+                <artifactId>ganon-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
