feat: add MetricsInvoker, add UserController

--- a/ganon-admin/pom.xml
+++ b/ganon-admin/pom.xml
@@ -90,6 +90,11 @@
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
