--- a/ganon-admin/src/main/resources/application.yml
+++ b/ganon-admin/src/main/resources/application.yml
@@ -12,3 +12,9 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
