feat: 增加zk分布式锁代码

--- a/ganon-admin/src/main/resources/application-dev.yml
+++ b/ganon-admin/src/main/resources/application-dev.yml
@@ -4,3 +4,8 @@ spring:
     url: jdbc:mysql://kdocker:3306/ganon_admin
     username: ganon
     password: ganon
+
+# 分布式锁配置
+#zk:
+#  connectString: "localhost:2181"
+#  rootPath: /SpringIntegration-LockRegistry
