--- a/ganon-admin/pom.xml
+++ b/ganon-admin/pom.xml
@@ -8,7 +8,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
-	<groupId>com.lyx.ganon</groupId>
 	<artifactId>ganon-admin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ganon-admin</name>
@@ -65,6 +64,16 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- 分布式锁 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-integration</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-zookeeper</artifactId>
 		</dependency>
 
 		<dependency>
