--- a/ganon-mybatis/src/main/resources/mybatis-generator-config.properties
+++ b/ganon-mybatis/src/main/resources/mybatis-generator-config.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://sworker:3306/ganon_admin
+jdbc.url=jdbc:mysql://sworker:3306/ganon_admin?useUnicode=true&characterEncoding=utf8
 jdbc.user=ganon
 jdbc.password=ganon
