--- a/ganon-mybatis/pom.xml
+++ b/ganon-mybatis/pom.xml
@@ -30,6 +30,10 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -75,6 +79,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+					<skipITs>true</skipITs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
