feat: 支持枚举转换

--- a/ganon-mybatis/src/main/resources/application.yml
+++ b/ganon-mybatis/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
 logging:
   level:
     com.lyx.ganon.mybatis: debug
+
+mybatis:
+  type-handlers-package: com.lyx.ganon.mybatis.config.typehandler
