enhance: 优化枚举处理器

--- a/ganon-mybatis/src/main/resources/application.yml
+++ b/ganon-mybatis/src/main/resources/application.yml
@@ -18,4 +18,4 @@ logging:
     com.lyx.ganon.mybatis: debug
 
 mybatis:
-  type-handlers-package: com.lyx.ganon.mybatis.config.typehandler
+  type-handlers-package: com.lyx.ganon.mybatis.config.type
